--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,6 +54,26 @@
   .text-active {
     color: theme('colors.gray.900');
   }
+
+  /* animation */
+  .animate-ping-100 {
+    animation-delay: 100ms;
+  }
+  .animate-delay-200 {
+    animation-delay: 200ms;
+  }
+  .animate-delay-300 {
+    animation-delay: 300ms;
+  }
+  .animate-delay-400 {
+    animation-delay: 400ms;
+  }
+  .animate-delay-500 {
+    animation-delay: 500ms;
+  }
+  .animate-delay-600 {
+    animation-delay: 600ms;
+  }
 }
 
 :root {
